statum-macros/tests/ui/invalid_presentation_duplicate_key.stderr
error: Error: duplicate `#[present(...)]` key `label` on machine `Flow`.
       Found: `label = "Again"`
       Expected: one `label` presentation field entry
       Fix: specify `label` at most once inside `#[present(...)]`.
  --> tests/ui/invalid_presentation_duplicate_key.rs:19:27
   |
19 | #[present(label = "Flow", label = "Again")]
   |                           ^^^^^
